// ============================================================================
// CAMPUSLINK — Complete Database Schema
// A Unified Student Platform for Item Recovery and Academic Collaboration
// ============================================================================
// Paste this into https://dbdiagram.io to render the ER diagram
// ============================================================================


// ────────────────────────────────────────────────────────────────────────────
// ENUMS
// ────────────────────────────────────────────────────────────────────────────

Enum user_role {
  USER
  MENTOR
  MODERATOR
  ADMIN
}

Enum item_status {
  PENDING
  APPROVED
  REJECTED
  CLAIMED
  RESOLVED
}

Enum value_tier {
  LOW
  MEDIUM
  HIGH
  VERY_HIGH
}

Enum claim_status {
  PENDING
  APPROVED
  REJECTED
}

Enum review_status {
  PENDING
  APPROVED
  REJECTED
}

Enum resource_type {
  NOTES
  PAST_ASSESSMENT
  EXTERNAL_LINK
  PROJECT_EXAMPLE
}

Enum resource_status {
  PENDING
  APPROVED
  REJECTED
}

Enum swap_type {
  SECTION
  COURSE
}

Enum swap_status {
  OPEN
  MATCHED
  ACCEPTED
  COMPLETED
  EXPIRED
  CANCELLED
}

Enum match_type {
  DIRECT
  CHAIN
}

Enum match_status {
  PROPOSED
  ACCEPTED
  COMPLETED
  DECLINED
}

Enum point_type {
  FINDER_REWARD
  TRUST_CONFIRM
  RESOURCE_UPLOAD
  REVIEW_HELPFUL
  QA_UPVOTE
  MENTOR_BONUS
  SWAP_COMPLETE
}

Enum notification_module {
  LOST_AND_FOUND
  COURSE_COMMUNITY
  SWAP
  SYSTEM
}

Enum moderation_target {
  ITEM
  CLAIM
  REVIEW
  RESOURCE
  QUESTION
  ANSWER
}

Enum moderation_action_type {
  APPROVED
  REJECTED
  FLAGGED
  REMOVED
}

Enum vote_value {
  UP
  DOWN
}


// ════════════════════════════════════════════════════════════════════════════
// SHARED TABLES
// ════════════════════════════════════════════════════════════════════════════

Table users {
  id              integer [pk, increment]
  google_id       varchar(255) [unique, not null, note: 'Google OAuth subject ID']
  email           varchar(255) [unique, not null]
  display_name    varchar(100) [not null]
  avatar_url      text
  role            user_role [not null, default: 'USER']
  telegram_id     varchar(100) [note: 'Linked Telegram account for DM notifications']
  civic_points    integer [not null, default: 0, note: 'CHECK (civic_points >= 0)']
  created_at      timestamptz [not null, default: `now()`]
  updated_at      timestamptz [not null, default: `now()`]

  Note: 'Central identity table linked to every module. Stores OAuth credentials, RBAC role, and cumulative Civic Points balance.'
}

Table point_transactions {
  id              integer [pk, increment]
  user_id         integer [not null, ref: > users.id]
  amount          integer [not null, note: 'Positive = earned, negative = deducted']
  type            point_type [not null]
  reference_id    integer [note: 'FK to item/review/swap that triggered this']
  reference_type  varchar(50) [note: 'Polymorphic: item, review, resource, swap']
  created_at      timestamptz [not null, default: `now()`]

  Note: 'IMMUTABLE append-only ledger. No UPDATE or DELETE allowed. Inserts happen inside a DB transaction alongside users.civic_points update for atomicity.'
}

Table notifications {
  id              integer [pk, increment]
  user_id         integer [not null, ref: > users.id]
  module          notification_module [not null]
  type            varchar(50) [not null, note: 'e.g. item:approved, swap:matched, review:approved']
  title           varchar(200) [not null]
  body            text
  reference_id    integer [note: 'ID of the related entity (item, swap, review, etc.)']
  reference_type  varchar(50) [note: 'Polymorphic: item, claim, swap_match, review, resource']
  is_read         boolean [not null, default: false]
  created_at      timestamptz [not null, default: `now()`]

  Note: 'Unified notification queue for all modules. Delivered via in-app feed and optional Telegram DM.'
}

Table moderation_actions {
  id              integer [pk, increment]
  moderator_id    integer [not null, ref: > users.id]
  target_type     moderation_target [not null]
  target_id       integer [not null, note: 'ID of the moderated entity']
  action          moderation_action_type [not null]
  reason          text [note: 'Required when action is REJECTED']
  spam_score      numeric(5,4) [note: 'AI confidence score from NLP classifier (0.0000–1.0000)']
  created_at      timestamptz [not null, default: `now()`]

  Note: 'Audit trail of every moderation decision. Used for CSV export and dispute resolution.'
}


// ════════════════════════════════════════════════════════════════════════════
// MODULE A — LOST & FOUND RECOVERY
// ════════════════════════════════════════════════════════════════════════════

Table items {
  id                    integer [pk, increment]
  reporter_id           integer [not null, ref: > users.id]
  title                 varchar(200) [not null]
  description           text [not null]
  photo_url             text [not null, note: 'S3/MinIO object URL']
  value_tier            value_tier [not null]
  status                item_status [not null, default: 'PENDING']
  location              varchar(300) [not null]
  telegram_message_id   bigint [unique, note: 'Ensures broadcast idempotency — item never posted twice']
  moderator_id          integer [ref: > users.id, note: 'Who approved/rejected this item']
  resolved_at           timestamptz
  created_at            timestamptz [not null, default: `now()`]
  updated_at            timestamptz [not null, default: `now()`]

  Note: 'Core Lost & Found table. Status enum enforces the state machine: PENDING → APPROVED → CLAIMED → RESOLVED. Reporter cannot claim their own item (enforced in application logic).'
}

Table claims {
  id                    integer [pk, increment]
  item_id               integer [not null, ref: > items.id]
  claimer_id            integer [not null, ref: > users.id]
  proof_description     text [not null, note: 'Proof of ownership: identifying marks, serial numbers, contents']
  status                claim_status [not null, default: 'PENDING']
  moderator_id          integer [ref: > users.id, note: 'Who reviewed this claim']
  rejection_reason      text
  reviewed_at           timestamptz
  created_at            timestamptz [not null, default: `now()`]

  Note: 'Links a potential owner to a lost item. Requires proof-of-ownership text. Self-claim blocking enforced at application layer (claimer_id ≠ item.reporter_id).'
}


// ════════════════════════════════════════════════════════════════════════════
// MODULE B — COURSE OVERVIEW COMMUNITY
// ════════════════════════════════════════════════════════════════════════════

Table courses {
  id                    integer [pk, increment]
  code                  varchar(20) [unique, not null, note: 'e.g. ICT452, INFO653']
  title                 varchar(200) [not null]
  credits               integer [not null, note: 'CHECK (credits > 0)']
  department            varchar(100) [not null]
  prerequisites         text [note: 'Free-text or comma-separated course codes']
  description           text
  avg_difficulty        numeric(3,2) [default: 0, note: 'Precomputed from reviews (1.00–5.00)']
  avg_workload          numeric(4,1) [default: 0, note: 'Average hours/week from reviews']
  avg_quality           numeric(3,2) [default: 0, note: 'Precomputed from reviews (1.00–5.00)']
  avg_usefulness        numeric(3,2) [default: 0, note: 'Precomputed from reviews (1.00–5.00)']
  avg_recommendation    numeric(3,2) [default: 0, note: 'Precomputed from reviews (1.00–5.00)']
  review_count          integer [not null, default: 0]
  created_at            timestamptz [not null, default: `now()`]
  updated_at            timestamptz [not null, default: `now()`]

  Note: 'Master course record. Aggregate scores are precomputed and updated on every review insert/update/delete to avoid expensive JOINs on read. GIN index with pg_trgm on (code || title || department) for full-text search.'
}

Table course_reviews {
  id                    integer [pk, increment]
  course_id             integer [not null, ref: > courses.id]
  user_id               integer [not null, ref: > users.id]
  difficulty            integer [not null, note: 'CHECK (difficulty BETWEEN 1 AND 5)']
  workload_hours        numeric(4,1) [not null, note: 'CHECK (workload_hours > 0)']
  quality               integer [not null, note: 'CHECK (quality BETWEEN 1 AND 5)']
  usefulness            integer [not null, note: 'CHECK (usefulness BETWEEN 1 AND 5)']
  recommendation        integer [not null, note: 'CHECK (recommendation BETWEEN 1 AND 5)']
  review_text           text
  is_anonymous          boolean [not null, default: false]
  helpfulness_votes     integer [not null, default: 0, note: 'Denormalized count for fast sorting']
  status                review_status [not null, default: 'PENDING']
  created_at            timestamptz [not null, default: `now()`]
  updated_at            timestamptz [not null, default: `now()`]

  indexes {
    (course_id, user_id) [unique, note: 'One review per student per course']
  }

  Note: 'Structured student review with multi-dimensional ratings. Anonymous flag hides user identity in API response but retains authorship in DB for moderation.'
}

Table review_votes {
  id                    integer [pk, increment]
  review_id             integer [not null, ref: > course_reviews.id]
  user_id               integer [not null, ref: > users.id]
  is_helpful            boolean [not null, note: 'true = helpful, false = not helpful']
  created_at            timestamptz [not null, default: `now()`]

  indexes {
    (review_id, user_id) [unique, note: 'One vote per user per review']
  }

  Note: 'Tracks whether users found a review helpful. Aggregated into course_reviews.helpfulness_votes.'
}

Table course_resources {
  id                    integer [pk, increment]
  course_id             integer [not null, ref: > courses.id]
  user_id               integer [not null, ref: > users.id]
  type                  resource_type [not null]
  title                 varchar(200) [not null]
  description           text
  file_url              text [note: 'S3/MinIO URL — for uploaded files (Notes, Assessments, Projects)']
  link_url              text [note: 'External URL — for EXTERNAL_LINK type']
  upvotes               integer [not null, default: 0, note: 'Denormalized count']
  downvotes             integer [not null, default: 0, note: 'Denormalized count']
  status                resource_status [not null, default: 'PENDING']
  created_at            timestamptz [not null, default: `now()`]

  Note: 'Uploaded files or curated links shared by course alumni. file_url and link_url are mutually exclusive based on type. Moderated before publication.'
}

Table resource_votes {
  id                    integer [pk, increment]
  resource_id           integer [not null, ref: > course_resources.id]
  user_id               integer [not null, ref: > users.id]
  vote                  vote_value [not null, note: 'UP (+1) or DOWN (-1)']
  created_at            timestamptz [not null, default: `now()`]

  indexes {
    (resource_id, user_id) [unique, note: 'One vote per user per resource — toggle or switch allowed']
  }

  Note: 'Junction table for upvote/downvote on resources. UNIQUE constraint prevents double-voting. Aggregated into course_resources.upvotes/downvotes.'
}

Table course_questions {
  id                    integer [pk, increment]
  course_id             integer [not null, ref: > courses.id]
  user_id               integer [not null, ref: > users.id]
  title                 varchar(300) [not null]
  body                  text [not null]
  view_count            integer [not null, default: 0]
  answer_count          integer [not null, default: 0, note: 'Denormalized for fast listing']
  is_pinned             boolean [not null, default: false, note: 'Only MENTOR or MODERATOR can pin']
  is_closed             boolean [not null, default: false]
  created_at            timestamptz [not null, default: `now()`]
  updated_at            timestamptz [not null, default: `now()`]

  Note: 'Q&A questions tagged to a course. Mentors can pin important threads. GIN index on title for search.'
}

Table course_answers {
  id                    integer [pk, increment]
  question_id           integer [not null, ref: > course_questions.id]
  user_id               integer [not null, ref: > users.id]
  body                  text [not null]
  upvotes               integer [not null, default: 0, note: 'Denormalized count']
  is_accepted           boolean [not null, default: false, note: 'Only question author can accept']
  created_at            timestamptz [not null, default: `now()`]
  updated_at            timestamptz [not null, default: `now()`]

  Note: 'Threaded answers to course questions. The question author can mark one answer as accepted.'
}

Table answer_votes {
  id                    integer [pk, increment]
  answer_id             integer [not null, ref: > course_answers.id]
  user_id               integer [not null, ref: > users.id]
  created_at            timestamptz [not null, default: `now()`]

  indexes {
    (answer_id, user_id) [unique, note: 'One upvote per user per answer']
  }

  Note: 'Upvote-only votes on answers (no downvote). Aggregated into course_answers.upvotes.'
}

Table course_followers {
  id                    integer [pk, increment]
  course_id             integer [not null, ref: > courses.id]
  user_id               integer [not null, ref: > users.id]
  created_at            timestamptz [not null, default: `now()`]

  indexes {
    (course_id, user_id) [unique, note: 'One follow record per user per course']
  }

  Note: 'Users who follow a course receive notifications for new reviews, resources, and questions.'
}

Table course_mentors {
  id                    integer [pk, increment]
  course_id             integer [not null, ref: > courses.id]
  user_id               integer [not null, ref: > users.id]
  earned_at             timestamptz [not null, default: `now()`]
  total_contributions   integer [not null, default: 0, note: 'Reviews + resources + answers for this course']

  indexes {
    (course_id, user_id) [unique, note: 'One mentor record per user per course']
  }

  Note: 'Top contributors earn Course Mentor status. Grants pin/highlight permissions and a verified badge on profile.'
}


// ════════════════════════════════════════════════════════════════════════════
// MODULE C — COURSE & SECTION SWAP
// ════════════════════════════════════════════════════════════════════════════

Table swap_requests {
  id                    integer [pk, increment]
  requester_id          integer [not null, ref: > users.id]
  swap_type             swap_type [not null]
  current_course_id     integer [not null, ref: > courses.id]
  current_section       varchar(10) [note: 'e.g. A, B, C — NULL allowed for course-level swap']
  desired_course_id     integer [ref: > courses.id, note: 'Same as current for section swap; different for course swap']
  desired_section       varchar(10) [note: 'NULL means any section is acceptable']
  notes                 text [note: 'Optional context from the requester']
  status                swap_status [not null, default: 'OPEN']
  expires_at            timestamptz [not null]
  cooldown_until        timestamptz [note: 'Set after cancellation to prevent spam']
  created_at            timestamptz [not null, default: `now()`]
  updated_at            timestamptz [not null, default: `now()`]

  Note: 'Core swap record. Partial unique index on (requester_id, current_course_id) WHERE status IN (OPEN, MATCHED) enforces one active request per user per course.'
}

Table swap_matches {
  id                    integer [pk, increment]
  request_a_id          integer [not null, ref: > swap_requests.id]
  request_b_id          integer [not null, ref: > swap_requests.id]
  request_c_id          integer [ref: > swap_requests.id, note: 'Only populated for CHAIN (3-way) matches']
  match_type            match_type [not null]
  status                match_status [not null, default: 'PROPOSED']
  created_at            timestamptz [not null, default: `now()`]
  updated_at            timestamptz [not null, default: `now()`]

  Note: 'Links compatible swap requests. For DIRECT matches, only request_a and request_b are set. For CHAIN (3-way) matches, request_c is also populated.'
}

Table swap_confirmations {
  id                    integer [pk, increment]
  match_id              integer [not null, ref: > swap_matches.id]
  user_id               integer [not null, ref: > users.id]
  confirmed_at          timestamptz [not null, default: `now()`]

  indexes {
    (match_id, user_id) [unique, note: 'Each user confirms once per match']
  }

  Note: 'Dual (or triple) confirmation gate. A match only transitions to ACCEPTED once ALL participants have a confirmation record.'
}

Table swap_audit_log {
  id                    integer [pk, increment]
  swap_request_id       integer [not null, ref: > swap_requests.id]
  actor_id              integer [not null, ref: > users.id]
  from_status           swap_status [not null]
  to_status             swap_status [not null]
  metadata              jsonb [note: 'Additional context: match_id, reason for cancel, etc.']
  created_at            timestamptz [not null, default: `now()`]

  Note: 'Immutable log of every swap state transition. Used for dispute resolution, analytics, and CSV export.'
}


// ════════════════════════════════════════════════════════════════════════════
// TABLE GROUP ORGANIZATION (for visual layout in dbdiagram)
// ════════════════════════════════════════════════════════════════════════════

TableGroup shared_infrastructure {
  users
  point_transactions
  notifications
  moderation_actions
}

TableGroup module_a_lost_and_found {
  items
  claims
}

TableGroup module_b_course_community {
  courses
  course_reviews
  review_votes
  course_resources
  resource_votes
  course_questions
  course_answers
  answer_votes
  course_followers
  course_mentors
}

TableGroup module_c_swap {
  swap_requests
  swap_matches
  swap_confirmations
  swap_audit_log
}
